# kdp-game-project

./: Readme.md  litestar_api.py  pyproject.toml
.kanbn/: index.md
.kanbn/tasks/: 00001-add-deployment-script-to-render.md  00001-add-dto-support-to-route-handlers-and-calls-to-apps-logic-services.md  00002-add-deployment-script-to-render.md  00002-add-dto-support-to-route-handlers-and-calls-to-apps-logic-services.md  00003-create-htmx-form-to-add-map.md  00004-create-service-layer-and-create-initial-map-villian-and-player-charactiers.md  00005-add-logging-either-structlog-or-loguru.md  add-deployment-script-to-render.md  add-dto-support-to-route-handlers-and-calls-to-apps-logic-services.md  create-htmx-form-to-add-map.md
kdp/apps/litestar/api/: __init__.py  app.py
kdp/apps/litestar/api/models/: definitions.py
kdp/domain/: entities.py  value_objects.py
tests/apps/litestar/api/: test_api.py
tests/domain/: test_entities.py
