[tool.poetry]
name = "game-project"
version = "0.1.0"
description = "Kingdom Death: Pirates game"
authors = ["gumatt <gumatt@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
litestar = {extras = ["msgspec"], version = "^2.5.0"}
loguru = "^0.7.2"
uvicorn = "^0.26.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-watch = "^4.2.0"
pytest-sugar = "^0.9.7"
pytest-cov = "^4.1.0"
assertpy = "^1.1"
mypy = "^1.8.0"
ruff = "^0.1.14"
black = "^23.12.1"

[tool.pytest.ini_options]
pythonpath = ["tests", "kdp", ".venv/lib/python3.11/site-packages"]
testpaths = ["tests"]
python_functions = "*_test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 120
select = [
    "A",
    "ARG",
    "B",
    "B9",
    "C",
    "C4",
    "COM812",
    "E",
    "ERA",
    "F",
    "I",
    "N",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "RET",
    "S",
    "T10",
    "UP",
    "W",]
ignore = ["A003"]
target-version = "py311"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**" = ["ARG", "S"]

[tool.pytest-watch]
ignore = ".venv"

